--- a/findmefinder/pom.xml
+++ b/findmefinder/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.htw.ai.wad.findmefinder</groupId>
-  <artifactId>FindMe</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>de.htw.ai.wad</groupId>
+  <artifactId>findmefinder</artifactId>
+  <version>1.0</version>
 
-  <name>FindMe</name>
+  <name>findmefinder</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -59,6 +59,19 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>libs/</classpathPrefix>
+              <mainClass>de.htw.ai.wad.findmefinder.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
