--- a/AddressViz/frontend/package.json
+++ b/AddressViz/frontend/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "tomcat-deploy redeploy ./target/dist/advi.war --hostname localhost --port 8080 --login admin --password 1234 --path /advi", 
+    "buildDeploy": "vue-cli-service build && tomcat-deploy redeploy ./target/dist/advi.war --hostname localhost --port 8080 --login admin --password 1234 --path /advi"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "nodemon": "^1.18.8",
+    "tomcat-deploy": "^1.0.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0"
@@ -25,6 +28,7 @@
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.17",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.0.5",
+    "webpack-war-plugin": "^1.0.0-beta.3"
   }
 }
